fix lendmark issue, made card more responsive on small screens

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,6 +18,7 @@
   flex-direction: column;
   align-items: center;
   flex-basis: 320px;
+  max-width: 100%;
 }
 
 .card__content {
